[package]
name = "measure_route"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio_ip_ping_request = { path = "../tokio_ip_ping_request" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
