[package]
name = "tokio_ip_ping_request"
version = "0.1.0"
authors = ["Igor Valet <igor_valet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27"
tokio = { version = "1", features = ["sync", "rt", "time"] }
